--- a/index.html
+++ b/index.html
@@ -3,18 +3,137 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Kishore Foam Agencies</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
 
-    <meta property="og:title" content="kishore-comfy-haven" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <title>Kishore Foam Agencies - Premium Mattresses & Foam Solutions in Panchkula | Oldest Showroom in Chandigarh Tricity</title>
+    <meta name="description" content="Kishore Foam Agencies is the oldest showroom in Chandigarh Tricity offering premium mattresses, sofa materials, curtain cloth, and foam products. Expert sofa making and dry cleaning services in Panchkula, Haryana. Authorized dealer of Sleepwell and D'Decor brands." />
+    <meta name="keywords" content="mattress shop Panchkula, foam shop Chandigarh, Sleepwell mattress dealer, sofa making Panchkula, curtain cloth Panchkula, dry cleaning services, D'Decor fabrics, furniture foam, bean bags Panchkula, mattress topper, orthopedic mattress, memory foam mattress, upholstery Panchkula, Sector 14 Panchkula" />
+    <meta name="author" content="Kishore Foam Agencies" />
+    <meta name="robots" content="index, follow" />
+    <meta name="googlebot" content="index, follow" />
+    <link rel="canonical" href="https://www.kishorefoamagencies.com" />
+
+    <meta property="og:title" content="Kishore Foam Agencies - Premium Mattresses & Foam Solutions in Panchkula" />
+    <meta property="og:description" content="Oldest showroom in Chandigarh Tricity offering premium mattresses, sofa materials, and foam products. Expert sofa making and dry cleaning services. Authorized Sleepwell and D'Decor dealer in Panchkula." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:url" content="https://www.kishorefoamagencies.com" />
+    <meta property="og:image" content="https://www.kishorefoamagencies.com/og-image.jpg" />
+    <meta property="og:locale" content="en_IN" />
+    <meta property="og:site_name" content="Kishore Foam Agencies" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:title" content="Kishore Foam Agencies - Premium Mattresses & Foam Solutions" />
+    <meta name="twitter:description" content="Oldest showroom in Chandigarh Tricity offering premium mattresses, sofa materials, and foam products in Panchkula." />
+    <meta name="twitter:image" content="https://www.kishorefoamagencies.com/og-image.jpg" />
+
+    <meta name="geo.region" content="IN-HR" />
+    <meta name="geo.placename" content="Panchkula" />
+    <meta name="geo.position" content="30.6942;76.8534" />
+    <meta name="ICBM" content="30.6942, 76.8534" />
+
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "LocalBusiness",
+      "name": "Kishore Foam Agencies",
+      "image": "https://www.kishorefoamagencies.com/og-image.jpg",
+      "description": "Premium mattresses, foam products, sofa making and dry cleaning services in Panchkula. Oldest showroom in Chandigarh Tricity.",
+      "address": [
+        {
+          "@type": "PostalAddress",
+          "streetAddress": "Shop Number 57, 58, 59, 60, Sector-14",
+          "addressLocality": "Panchkula",
+          "addressRegion": "Haryana",
+          "postalCode": "134109",
+          "addressCountry": "IN"
+        },
+        {
+          "@type": "PostalAddress",
+          "streetAddress": "Sco. 28, Sector - 5, MDC",
+          "addressLocality": "Panchkula",
+          "addressRegion": "Haryana",
+          "postalCode": "134114",
+          "addressCountry": "IN"
+        }
+      ],
+      "geo": {
+        "@type": "GeoCoordinates",
+        "latitude": 30.6942,
+        "longitude": 76.8534
+      },
+      "url": "https://www.kishorefoamagencies.com",
+      "telephone": "+919417151386",
+      "email": "kishore_foam@rediffmail.com",
+      "openingHoursSpecification": {
+        "@type": "OpeningHoursSpecification",
+        "dayOfWeek": [
+          "Monday",
+          "Tuesday",
+          "Wednesday",
+          "Thursday",
+          "Friday",
+          "Saturday",
+          "Sunday"
+        ],
+        "opens": "10:30",
+        "closes": "20:45"
+      },
+      "priceRange": "₹₹",
+      "aggregateRating": {
+        "@type": "AggregateRating",
+        "ratingValue": "4.95",
+        "bestRating": "5",
+        "ratingCount": "100"
+      },
+      "sameAs": [
+        "https://g.page/r/CYourGoogleMapsID"
+      ],
+      "areaServed": [
+        "Panchkula",
+        "Chandigarh",
+        "Mohali",
+        "Zirakpur",
+        "Ambala"
+      ],
+      "hasOfferCatalog": {
+        "@type": "OfferCatalog",
+        "name": "Foam Products and Services",
+        "itemListElement": [
+          {
+            "@type": "Offer",
+            "itemOffered": {
+              "@type": "Product",
+              "name": "Mattresses",
+              "description": "Premium memory foam, spring, and orthopedic mattresses"
+            }
+          },
+          {
+            "@type": "Offer",
+            "itemOffered": {
+              "@type": "Product",
+              "name": "Sofa Materials",
+              "description": "High-density foam, upholstery fabrics, springs and hardware"
+            }
+          },
+          {
+            "@type": "Offer",
+            "itemOffered": {
+              "@type": "Service",
+              "name": "Custom Sofa Making",
+              "description": "Expert craftsmanship in creating custom sofas"
+            }
+          },
+          {
+            "@type": "Offer",
+            "itemOffered": {
+              "@type": "Service",
+              "name": "Dry Cleaning",
+              "description": "Professional furniture and upholstery dry cleaning"
+            }
+          }
+        ]
+      }
+    }
+    </script>
   </head>
 
   <body>
