--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     <meta name="googlebot" content="index, follow" />
     <link rel="canonical" href="https://www.kishorefoamagencies.com" />
 
+    <!-- Google Search Console Verification - Replace with your actual verification code -->
+    <meta name="google-site-verification" content="YOUR_GOOGLE_SEARCH_CONSOLE_VERIFICATION_CODE" />
+
     <meta property="og:title" content="Kishore Foam Agencies - Premium Mattresses & Foam Solutions in Panchkula" />
     <meta property="og:description" content="Oldest showroom in Chandigarh Tricity offering premium mattresses, sofa materials, and foam products. Expert sofa making and dry cleaning services. Authorized Sleepwell and D'Decor dealer in Panchkula." />
     <meta property="og:type" content="website" />
@@ -143,6 +146,15 @@
   </head>
 
   <body>
+    <!-- Google Analytics 4 - Replace with your actual GA4 Measurement ID -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-XXXXXXXXXX');
+    </script>
+
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
